Fixed indentation and formatting

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
         {
             "name": "Raul Rodriguez",
             "email": "raulrodriguez782@gmail.com"
+        },
+        {
+            "name": "Luis Cordova",
+            "email": "cordoval@gmail.com"
         }
     ],
     "require": {
