--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,19 @@
     ],
     "require": {
         "gentle/bitbucket-api": "~0.4",
-        "gushphp/gush": "*"
+        "gushphp/gush": "dev-temp-bitbucket-remove@dev"
     },
     "autoload": {
         "psr-4": {
             "Gush\\Adapter\\": "src/"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/sstok/gush.git"
+        }
+    ]
 }
